更新变量笔记

--- a/002-常量.md
+++ b/002-常量.md
@@ -22,6 +22,24 @@
 
 所有的整数，如：100，200
 
+#### 进制
+
+Java提供四种表示整数常量的方法：
+
+二进制：0b开头
+
+八进制：以数字0开头
+
+十进制：无前缀，默认是十进制
+
+十六进制：以0x开头
+
+不同的进制输出会转换成十进制，
+
+> System.out.println("0x10");
+
+会输出16
+
 ### 小数常量
 
 所有的小数，如1.23
@@ -31,6 +49,5 @@
 true和false，注意是小写，而Python中是大写。
 
 ### null
-
 
 ## 自定义常量
