--- a/notes/004-类型转换.md
+++ b/notes/004-类型转换.md
@@ -6,7 +6,7 @@ Boolean类型不参与转换
 
 从小往大的转换，byte、short、char -> int -> long -> float -> double
 
-byte、short、char直接不相互转换，直接转换成int运算。
+byte、short、char不相互转换，直接转换成int运算。
 
 ```
 byte a = 1;
@@ -16,15 +16,37 @@ byte c = a + b;
 
 将会报错，因为`a + b`结果是int。
 
+```bash
+byte a = 1
+int b = 1;
+long c = a + b;
+```
+
+这个是对的。
+
 ## 强制转换
 
 从大往小的转化，是直接截取，可能会有精度的损失。
 
 这和C语言中是一样的。
 
+```bash
 byte a = (byte) 130;
 System.out.println(a);
-输出是-126
+```
+
+输出是-126，说明是截断。
+
+## 越界
+
+```apache
+int a = 1;
+int b = 2147483647;
+int c = a + b;
+System.out.println(c);
+```
+
+输出-2147483648，说明Java没做什么特殊处理。
 
 ## 字符参与运算
 
@@ -33,4 +55,5 @@ System.out.println(a);
 ``````
 System.out.println('a'+1+"HelloWorld");
 ``````
+
 输出的结果是`98HelloWorld`
