更新至循环笔记

--- a/notes/004-类型转换.md
+++ b/notes/004-类型转换.md
@@ -37,6 +37,15 @@ System.out.println(a);
 
 输出是-126，说明是截断。
 
+注意，复合赋值运算中，隐含了强制类型抓换，所以下面的代码不会报错。
+
+```
+byte x = 1;
+x += 1;
+```
+
+此处包含了一个强制转换
+
 ## 越界
 
 ```apache
@@ -50,7 +59,7 @@ System.out.println(c);
 
 ## 字符参与运算
 
-运算顺序是从左往右的，对于字符串而言是拼接操作，对于字符而言，“+”表示取ASCII的值，然后做数学运算。
+运算顺序是从左往右的，对于字符串而言是拼接操作，对于字符而言，“+”表示取ASCII的值，然后做数学运算，这里还藏着一个**默认转化**。
 
 ``````
 System.out.println('a'+1+"HelloWorld");
