--- a/notes/005-算数运算符.md
+++ b/notes/005-算数运算符.md
@@ -1,1 +1,44 @@
 # 算术运算符
+
+算数运算符的英文是arithmetic operator。
+
+
+| 运算符 | 作用/注意事项                    |
+| ------ | -------------------------------- |
+| +      | 做加法，注意类型转换和字符串拼接 |
+| -      | 做减法                           |
+| *      | 做乘法                           |
+| /      | 整数除法还是整数                 |
+| %      | 取商                             |
+| ++     | 自增运算                         |
+| --     | 自减运算                         |
+
+## 除法
+
+```
+int x = 5;
+int y = 3;
+System.out.println(x / y);
+System.out.println(x * 1.0 / y);
+```
+
+整数除以整数还是整数，浮点数参与运算结果才是浮点数。
+
+## 自增/自减
+
+这部分和C语言中一样。
+
+```
+int a = 1;
+int b = 1;
+int c = a++;    // 先把a的值给c，a再自增
+int d = ++b;    // b先自增，再把自增后的b赋值给d
+System.out.println("a: " + a);
+System.out.println("b: " + b);
+System.out.println("c: " + c);
+System.out.println("d: " + d);
+```
+
+很久以前我是这样记的：
+
+(a++)返回的是a原来的值，(++a)返回的是a运算后的值。
