更新到方法重载

--- a/notes/006-键盘录入基本格式.md
+++ b/notes/006-键盘录入基本格式.md
@@ -4,20 +4,38 @@
 2. 创建**键盘录入**对象
 3. 使用方法
 
-导包
+## 导包
 
 ```code
 import java.util.Scanner
 ```
 
-创建**键盘**录入对象
+## 创建**键盘**录入对象
 
 ```code
 Scanner sc = new Scanner(System.in);
 ```
 
-使用方法
+## 使用方法
 
-```code
+### 读入一个整数
+
+读第一个空白符前面的内容
+
+```
 int x = sc.nextInt();
 ```
+
+### 读入一整行字符串
+
+```
+String s = sc.nextLine();
+```
+
+### 读入一个单词
+
+```
+String s = sc.next();
+```
+
+此时如果输入一整行，读到的会是第一个空白符前的单词。比如输入`Hello World`，读到的会是`Hello`。
