--- a/notes/数组.md
+++ b/notes/数组.md
@@ -11,3 +11,12 @@ int[] array = new int[100];
 ```
 
 使用`array`中下标为`i`的元素，即`array[i]`。
+
+数组的初始化：
+
+```
+int[][] array = {
+    {1, 2, 3, 4},
+    {1, 2, 3}
+};
+```
