--- a/notes/012-数组.md
+++ b/notes/012-数组.md
@@ -20,6 +20,14 @@
 int[] array = new int[100];
 ```
 
+这里的“类型”，也可以是类，比如要创建一个Student的数组，代码如下：
+
+```
+Student[] s = new Student[];
+```
+
+详见[此](https://blog.csdn.net/W_S_Y_GUAMEI/article/details/105987840)。
+
 ### 静态初始化
 
 数组的静态初始化举例：
