--- a/notes/正则表达式.md
+++ b/notes/正则表达式.md
@@ -58,6 +58,4 @@ group(0)即整个字符串本身，而group(n)即从左往右数第n个左括号
 
 ## 贪心、非贪心
 
-针对*和+后面的内容来说的，`\*s`ashshs
-
-详见[此](https://blog.csdn.net/lxcnn/article/details/4756030)。
+针对*和+后面的内容来说的，详见[此](https://blog.csdn.net/lxcnn/article/details/4756030)。
